--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.lsu.aschoolnotice">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -9,8 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ASchoolNotice">
-
-        <activity android:name=".ShowNoticeBoard"></activity>
+        <activity
+            android:name=".NoticeBoard"
+            android:label="@string/title_activity_notice_board"
+            android:theme="@style/Theme.ASchoolNotice.NoActionBar"></activity>
 
         <activity android:name=".MainActivity">
             <intent-filter>
