--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ASchoolNotice">
-
+        <activity android:name=".PopupActivity" android:theme="@android:style/Theme.Dialog"></activity>
         <activity
             android:name=".NoticeBoard"
             android:label="@string/title_activity_notice_board"
-            android:theme="@style/Theme.ASchoolNotice.NoActionBar"></activity>
-
+            android:theme="@style/Theme.ASchoolNotice.NoActionBar" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <service
             android:name=".MyFirebaseMessagingService"
             android:stopWithTask="false"
